# embedded-ci-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GEMINI.md  Makefile  PROJECT_PLAN.md  PROMPTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
embedded_ci_lab/: cli.py  loader.py  metrics.py  models.py  reporting.py  runner.py  utils.py  yocto_validator.py
pipelines/: .gitkeep  fail_demo.yaml  full_yocto_cycle_demo.yaml  invalid_empty_command.yaml  invalid_empty_step_name.yaml  memory_limit_demo.yaml  timeout_demo.yaml  yocto_lab_integration_demo.yaml  yocto_loader_demo.yaml  yocto_policy_gate_fail.yaml  yocto_validate_demo.yaml  yocto_validate_fail_demo.yaml
pipelines/archived/: demo.yaml  memory_test.yaml  success_demo.yaml
pipelines/core/: invalid_empty_name.yaml  invalid_no_steps.yaml  loader_fail_shell_missing_command.yaml  retry_demo.yaml
pipelines/integration/: real_yocto_build.yaml  yocto-demo.yaml  yocto_init.sh  yocto_loader_demo.yaml  yocto_policy_gate_fail.yaml  yocto_real_build.yaml
tests/: test_env_vars.py  test_integration.py  test_loader.py  test_logging.py  test_memory_limits.py  test_metrics.py  test_regression.py  test_reporting.py  test_retries.py  test_robustness.py  test_runner.py  test_timeout.py  test_yocto_fixtures.py  test_yocto_loader.py  test_yocto_runner.py  test_yocto_validator.py
tests/e2e/: test_integration.py  test_regression_e2e.py  test_yocto_artifacts_e2e.py  test_yocto_scenarios_e2e.py
tests/fixtures/yocto_artifacts/fail/: bzImage
tests/unit/: test_env_vars.py  test_logging.py
(+1 files in other folders)
