[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-ci-lab"
version = "1.1.0"
description = "A minimal local CI pipeline runner for embedded workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0.1",
    "psutil>=5.9.0",
]

[tool.setuptools]
packages = ["embedded_ci_lab"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
embedded-ci = "embedded_ci_lab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
